--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,31 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <a href="../index.html">Home</a>
+    <img src="./lasagna.jpeg" alt="square piece of lasagna on a white plate"/>
+    <h2>World's Best Lasagna</h2>
+    <p>A fan favorite recipe that's been tested and tried over 7 million times. This breath taking recipe will satisfy anyone looking to take on this recipe</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 pound sweet Italian sausage</li>
+        <li>¾ pound lean ground beef</li>
+        <li>½ cup minced onion</li>
+        <li>2 cloves garlic, crushed</li>
+        <li>1 (28 ounce) can crushed tomatoes</li>
+        <li>2 (6.5 ounce) cans canned tomato sauce</li>
+        <li>2 (6 ounce) cans tomato paste</li>
+        <li>2 tablespoons white sugar</li>
+        <li>4 tablespoons chopped fresh parsley, divided</li>
+        <li>1 ½ teaspoons dried basil leaves</li>
+        <li>1 ½ teaspoons salt, divided, or to taste</li>
+        <li>1 teaspoon Italian seasoning</li>
+        <li>½ teaspoon fennel seeds</li>
+        <li>¼ teaspoon ground black pepper</li>
+        <li>12 lasagna noodles</li>
+        <li>16 ounces ricotta cheese</li>
+        <li>1 egg</li>
+        <li>¾ pound mozzarella cheese, sliced</li>
+        <li>¾ cup grated Parmesan cheese</li>
+    </ul>
+    <a href="../index.html" >Home</a>
 </body>
 </html>
