New recipe page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna</title>
 </head>
 <body>
     <h1>Lasagna</h1>
     <img src="./lasagna.jpeg" alt="square piece of lasagna on a white plate"/>
-    <h2>World's Best Lasagna</h2>
+    <h2>Description</h2>
     <p>A fan favorite recipe that's been tested and tried over 7 million times. This breath taking recipe will satisfy anyone looking to take on this recipe</p>
     <h3>Ingredients</h3>
     <ul>
