update index and README.md
changed some headings and added the link for new recipe on index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/Chicken-Fried-Rice.html">Chicken Fried Rice</a>
 </body>
 </html>
