Add ingredients and steps list

--- a/recipes/scrambled-hotdogs-and-eggs.html
+++ b/recipes/scrambled-hotdogs-and-eggs.html
@@ -7,6 +7,22 @@
 </head>
 <body>
   <h1>Scrambled Hot Dogs and Eggs</h1> 
-  <img src="Scrambledeggs.jpeg" alt="bowl of scrambled eggs with chopped up hot dogs"/> 
+  <img src="Scrambledeggs.jpeg" alt="bowl of scrambled eggs with chopped up hot dogs"/>
+  <h2>Description</h2>
+  <p>This simple recipe will only take 5 minutes to make with only 2 ingredients. Who doesn't like a quick and easy meal</p>
+   <h2>Ingredients</h2>
+   <ul>
+    <li>1/2 tablespoon butter</li>
+    <li>1 hot dog, cut into 1/2-inch slices</li>
+    <li>1 large egg</li>
+    <li>1/4 teaspoon kosher salt</li>
+    <li>1/8 teaspoon freshly ground black pepper</li>
+   </ul>
+   <h2>Steps</h2>
+<ol>
+    <li>Melt butter in a small nonstick skillet over medium heat. Add hot dogs and cook until browned on all sides, about 2 minutes. Turn heat to down to medium-low.</li>
+    <li>Whisk eggs with salt and pepper until well blended and pour over hot dogs. Cook, stirring constantly until eggs are set. Serve immediately.</li>
+</ol>
+<a href="../index.html"></a>
 </body>
 </html>
