Add list format to index
added the link of scrambled hot dogs and eggs to index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/Chicken-Fried-Rice.html">Chicken Fried Rice</a>
+    <ul>
+   <li><a href="recipes/lasagna.html">Lasagna</a></li>
+  <li><a href="recipes/Chicken-Fried-Rice.html">Chicken Fried Rice</a></li>
+  <li><a href="recipes/scrambled-hotdogs-and-eggs.html">Scrambled Hot Dogs and Eggs</a></li> 
+    </ul>
 </body>
 </html>
