change the code to include a link to homepage
corrected the code so all recipes have a link back to the home page

--- a/recipes/Chicken-Fried-Rice.html
+++ b/recipes/Chicken-Fried-Rice.html
@@ -41,6 +41,6 @@
 <li>Remove from heat and scoop into bowls. Top with green onions.</li>
 <li>For Sauce, stir mayonnaise, sweet chili sauce, and hot sauce in a bowl. Drizzle over rice bowls before serving.</li>
     </ol>
-    <a href="../index.html"></a>
+    <a href="../index.html" >Home</a>
 </body>
 </html>
