--- a/recipes/scrambled-hotdogs-and-eggs.html
+++ b/recipes/scrambled-hotdogs-and-eggs.html
@@ -23,6 +23,6 @@
     <li>Melt butter in a small nonstick skillet over medium heat. Add hot dogs and cook until browned on all sides, about 2 minutes. Turn heat to down to medium-low.</li>
     <li>Whisk eggs with salt and pepper until well blended and pour over hot dogs. Cook, stirring constantly until eggs are set. Serve immediately.</li>
 </ol>
-<a href="../index.html"></a>
+<a href="../index.html" >Home</a>
 </body>
 </html>
